fix: remove overflow-y property from menu styles

--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -8,7 +8,6 @@
   background-color: $menu-bg;
   transform: translateX(-100%);
   transition: transform 0.4s ease-in-out;
-  overflow-y: auto;
 
   @media (min-width: 744px) {
     padding: 0 10% 544px;
